# timecalc

./: AGENTS.md  Cargo.toml  README.md  build.sh
.github/workflows/: release.yml
src/: calc.rs  main.rs
